ocaml/testsuite/tests/templates/basic/bad_instance_repeated_arg_name.reference
File "bad_instance_repeated_arg_name.ml", line 2, characters 2-56:
2 |   Monoid_utils(Monoid)(List_monoid)(Monoid)(List_monoid) [@jane.non_erasable.instances]
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This instance has multiple arguments with the name Monoid.
